Fix Menu tab layout issue

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -11,15 +11,13 @@
 
 html{
     font: 62.5% "Monospace", sans-serif;
+    height: 100%;
 }
 
 body{
     display: flex;
     flex-direction: column;
-}
-
-html,body{
-    height: 100%;
+    min-height: 100%;
 }
 
 .nav{
@@ -71,7 +69,6 @@ html,body{
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100%;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -88,10 +85,10 @@ html,body{
 
 .menu__card{
     display: grid;
-    grid-template-columns: repeat(auto-fill,50vh);
+    grid-template-columns: repeat(auto-fill,60vmin);
     grid-auto-rows: min-content;
     justify-content: center;
-    gap: 4%;
+    gap: 8vh;
     padding: 8vw;
 }
 
@@ -102,7 +99,7 @@ html,body{
 .menu__header{
     display: flex;
     border-bottom: 2px solid black;
-    font-size: 2em;
+    font-size: 4vh;
     font-weight: 600;
 }
 .menu__num {
@@ -114,7 +111,7 @@ html,body{
 }
 
 .menu__item-list{
-    font-size: 1.8em;
+    font-size: 2.8vh;
     color: var(--light-black);
     font-weight: 600;
 }
@@ -218,7 +215,14 @@ html,body{
     }
     .nav__brand{
         font-size: 6vw;
-    }   
+    }  
+    
+    .menu__header{
+        font-size: 4vw;
+    }
+    .menu__item-list{
+        font-size: 2.8vw;
+    }
 
     .contact-form{
         width: 70vw;
